--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/html/test_symfo_7/public; #change test_symfo_7 to your project name
+    root /var/www/html/my_project_directory/public; #change my_project_directory to your project name
     index index.php;
 
     location / {
